# mammotion-lite

./: .e2e-token  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.dev.yml  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml  sonarcloud.yml
custom_components/mammotion_lite/: __init__.py  _capture.py  _pymammotion_patch.py  binary_sensor.py  camera.py  config_flow.py  const.py  device_tracker.py  device_tracker_helpers.py  event_handling.py  manifest.json  runtime_data.py  sensor.py  sensors.py  services.yaml  strings.json
custom_components/mammotion_lite/translations/: en.json
custom_components/mammotion_lite/www/: agora-client.js
tests/: conftest.py
tests/e2e/: conftest.py  test_integration_loads.py
tests/integration/: test_camera.py  test_capture_wiring.py  test_entity_states.py  test_init_coverage.py  test_mow_lifecycle.py  test_setup.py
tests/unit/: test_binary_sensor.py  test_capture.py  test_config_flow.py  test_const.py  test_device_tracker.py  test_device_tracker_branches.py  test_event_handling.py  test_pymammotion_contract.py  test_pymammotion_patch.py  test_runtime_data.py  test_scaffold_smoke.py  test_sensors.py  test_wifi_rssi_branches.py
