[project]
name = "mammotion-lite"
version = "0.1.0"
description = "Lightweight Mammotion mower integration for Home Assistant"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
# Single source root so coverage XML has fully-qualified filenames.
# SonarCloud needs this to map coverage to sonar.sources.
source = ["."]
include = ["custom_components/mammotion_lite/*"]
relative_files = true
omit = ["tests/*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
